findbugs use valueOf
svn path=/dasCore/community/autoplot2011/trunk/; revision=7006